--- a/app/android/local.properties
+++ b/app/android/local.properties
@@ -1,5 +1,2 @@
-sdk.dir=C:/Users/seema/AppData/Local/Android/Sdk
-flutter.sdk=C:\\src\\flutter\\flutter\\flutter
-flutter.buildMode=debug
-flutter.versionName=1.0.0
-flutter.versionCode=1
+sdk.dir=C:\\Users\\Hp\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter
